# ddd-on-rust

./: Cargo.toml
.github/ISSUE_TEMPLATE/: feature-required.md
src/: aggregate.rs  doc.rs  error.rs  event.rs  lib.rs  repository.rs
