[package]
name = "domain-driven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="*",features=["derive"]}
async-trait = "*"
tokio = {version="*",features=["macros","sync","rt"]}
uuid = {version="*",features=["v4"]}